--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker: Criando containers sem dor de cabeça.</li>
         <li>Ansible</li>
-        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de software </li>
+        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de software. </li>
     </ul>
 </body>
 </html>
