--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     <dt>Google Cloud</dt>
     <dd>Deploy de uma aplicação em Spring MVC</dd>
 
+    <dt>Shell Script I</dt>
+    <dd>Começando seus scripts de automação de tarefas</dd>
+
+    <dt>Shell Script II</dt>
+    <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
+
     </dl>
 </body>
 </html>
