--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <dd>Gerencie Docker na nuvem da AWS</dd>
     </dl>
 
-    <h2>Cursos do SO Linux</h2>
+    <h2>Cursos do SO Linux:</h2>
     <dl>
     <dt>Linux I</dt>
     <dd>Conhecendo e utilizando o terminal</dd>
