Ajustando títulos cursos de linux 2 pontos

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
     <h2>Cursos do SO Linux:</h2>
     <dl>
-    <dt>Linux I</dt>
+    <dt>Linux I:</dt>
     <dd>Conhecendo e utilizando o terminal</dd>
 
-    <dt>Linux II</dt>
+    <dt>Linux II:</dt>
     <dd>Programas, processos e pacotes</dd>
     
-    <dt>Google Cloud</dt>
+    <dt>Google Cloud:</dt>
     <dd>Deploy de uma aplicação em Spring MVC</dd>
 
-    <dt>Shell Script I</dt>
+    <dt>Shell Script I:</dt>
     <dd>Começando seus scripts de automação de tarefas</dd>
 
-    <dt>Shell Script II</dt>
+    <dt>Shell Script II:</dt>
     <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
 
     </dl>
